--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Our Menu</h1>
+    <h1>Our</h1>
     <div class="col i1">
         <h4>Pizza</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
