--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,31 +2,49 @@
 <html>
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="main.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link rel='stylesheet' href='css/style.css'>
 </head>
 
 <body>
-    <h1>Our</h1>
-    <div class="col i1">
-        <h4>Pizza</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor in reprehenderit in voluptate velit esse cillum dolore</p>
-    </div>
-    <div class="col i2">
-        <h4>Burger</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor in reprehenderit in voluptate velit esse cillum dolore</p>
-    </div>
-    <div class="col i3">
-        <h4>Fries</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor in reprehenderit in voluptate velit esse cillum dolore</p>
-    </div>
+    <div class="container">
+        <div class="row">
+            <h1 class="menu-title">Our menu</h1>
+            <div class="col-lg-4">
+                <div class="item">
+                    <div class="item-title" id="title-one">
+                        <h3>Chicken</h3>
+                    </div>
+                    <p>
+                        In publishing, art, and communication, content is the information and experiences that are directed toward an end-user or audience. Content is "something that is to be expressed through some medium, as speech, writing or any of various arts".
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="item">
+                    <div class="item-title" id="title-two">
+                        <h3>Beef</h3>
+                    </div>
+                    <p>
+                        In publishing, art, and communication, content is the information and experiences that are directed toward an end-user or audience. Content is "something that is to be expressed through some medium, as speech, writing or any of various arts".
+                </div>
+            </div>
+            <div class="col-lg-4 col-lg-tablet">
+                <div class="item">
+                    <div class="item-title" id="title-three">
+                        <h3>Sushi</h3>
+                    </div>
+                    <p>
+                        In publishing, art, and communication, content is the information and experiences that are directed toward an end-user or audience. Content is "something that is to be expressed through some medium, as speech, writing or any of various arts".
+                    </p>
+                </div>
+            </div>
 
+        </div>
+    </div>
 </body>
 
 </html>
